@@ -1,5 +1,9 @@
 2004-04-06  David Bateman  <dbateman@free.fr>
 
+	* Array.cc (Array<T>::resize_no_fill (const dim_vector& dv),
+	Array<T>::resize_and_fill (const dim_vector& dv, const T& val)):
+	Make their behavior equivalent except for filling vs. not filling.
+
   	* oct-sort.cc: New template class for arbitrary sorting.
   	* oct-sort.h: Declaration of sort class.
   	* Makefile: Add them to the appropriate lists.
